--- a/example-vagrant.config.json
+++ b/example-vagrant.config.json
@@ -70,6 +70,15 @@
       "dmode": 775,
       "fmode": 664
     },
+    {
+      "host": "../certificates",
+      "guest": "/home/vagrant/certificates",
+      "owner": "vagrant",
+      "group": "www-data",
+      "type": "nfs",
+      "dmode": 775,
+      "fmode": 664
+    }
   ],
 
   "forwarded_ports": [
