--- a/example-vagrant.config.json
+++ b/example-vagrant.config.json
@@ -57,6 +57,15 @@
       "type": "nfs",
       "dmode": 775,
       "fmode": 764
+    },
+    {
+    "host": "../config",
+    "guest": "/home/vagrant/config",
+    "owner": "vagrant",
+      "group": "www-data",
+      "type": "nfs",
+      "dmode": 775,
+      "fmode": 764
     }
   ],
   "forwarded_ports": [
